# scsnv

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  OLDDOC  README.md
data/: ensembl_94_gene_groups.txt  gene_groups.txt
include/: align_aux.hpp  annotation.hpp  aux.hpp  bam_genes.hpp  bam_genes_aux.hpp  barcodes.hpp  build.hpp  collapse_aux.hpp  collapse_hist.hpp  collapse_worker.hpp  dfix.hpp  dups.hpp  dups_bk.hpp  dust.hpp  fasta.hpp  fastq.hpp  genome_align.hpp  gtf.hpp  gzstream.hpp  h5misc.hpp  index.hpp  interval_tree.hpp  iprocessor.hpp  iprocessor_bk.hpp  map_base.hpp  map_worker.hpp  misc.hpp  paccuracy.hpp  paccuracy_bk.hpp  pbarcodes.hpp  pbase.hpp  pcollapse.hpp  pileup.hpp  pileup_aux.hpp  pileup_worker.hpp  pindex.hpp  pmap.hpp  pmixture.hpp  ppileup.hpp  psnvcounts.hpp  (+11 more)
scsnvpy/: pyproject.toml  setup.py
scsnvpy/scsnvpy/: __init__.py  _align_mats.hpp  _amats.pxd  annaux.py  annotate.py  cells.py  cmds.py  data.pyx  gmix.pyx  snv2vcfmtx.py  snvcmp.py  snvmats.cpp  snvmats.pyx  snvmerge.py
scsnvpy/src/scsnvpy/: annaux.py  cellrngr.py  cells.py  data.c  data.pyx  gmix.c  plot.py  scsnv2mtx.py  scsnvmisc.py  snv2vcfmtx.py  snvmats.cpp
src/: CMakeLists.txt  annotation.cpp  aux.cpp  barcodes.cpp  build.cpp  collapse_aux.cpp  collapse_worker.cpp  genome_align.cpp  gtf.cpp  gzstream.cpp  index.cpp  iprocessor.cpp  iprocessor_bk.cpp  map_worker.cpp  paccuracy.cpp  paccuracy_bk.cpp  pbarcodes.cpp  pbase.cpp  pcollapse.cpp  pileup.cpp  pileup_worker.cpp  pmap.cpp  pmixture.cpp  ppileup.cpp  psnvcounts.cpp  ptrim.cpp  quant_worker.cpp  reader.cpp  rfilter.cpp  sbam_writer.cpp  scsnv.cpp  sequence.cpp  transcript_align.cpp
src/bwa/: CMakeLists.txt
src/muts/: bam_genes.hpp  collapse_aux.cpp  collapse_aux.hpp  collapse_worker.cpp  collapse_worker.hpp  pileup.cpp  pileup.hpp  pileup_worker.cpp  pileup_worker.hpp  sbam_merge.hpp
src/progs/: barcodes.cpp  barcodes.hpp  base.cpp  base.hpp  collapse.cpp  collapse.hpp  index.hpp  map.cpp  map.hpp  pileup.cpp  pileup.hpp  quant.cpp  quant.hpp
src/scsnv/: align_aux.hpp  aux.cpp  aux.hpp  barcodes.cpp  barcodes.hpp  build.cpp  build.hpp  dups.hpp  genome_align.cpp  genome_align.hpp  index.cpp  index.hpp  map_base.hpp  map_worker.cpp  map_worker.hpp  quant_worker.cpp  quant_worker.hpp  reader.cpp  reader.hpp  tag_reader.cpp  tag_reader.hpp  transcript_align.cpp  transcript_align.hpp
src/util/: annotation.cpp  annotation.hpp  dust.hpp  fasta.hpp  fastq.hpp  gtf.cpp  gtf.hpp  h5misc.hpp  interval_tree.hpp  misc.hpp  read_buffer.hpp  sbam_writer.cpp  sbam_writer.hpp  sequence.cpp  sequence.hpp  task_log.hpp  timer.hpp  tokenizer.hpp
