cmake_minimum_required (VERSION 3.1)
project (scsnv C CXX)

if (POLICY CMP0025)
  cmake_policy(SET CMP0025 NEW)
endif ()

set (CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wextra")

FIND_LIBRARY(HTS_LIBRARY NAMES libhts.a DOC "Htslib Library")
FIND_PATH(HTS_INCLUDE NAMES "htslib/sam.h" DOC "Htslib Include")
INCLUDE_DIRECTORIES(SYSTEM ${HTS_INCLUDE})
MESSAGE( "HTS LIBRARY: ${HTS_LIBRARY}" )
MESSAGE( "HTS INCLUDE: ${HTS_INCLUDE}" )

#FIND_LIBRARY(BWA_LIBRARY NAMES libbwa.a DOC "BWA Library")
#FIND_PATH(BWA_INCLUDE NAMES "bwa/bwa.h" DOC "BWA Include")
#INCLUDE_DIRECTORIES(SYSTEM ${BWA_INCLUDE})
#MESSAGE( "BWA LIBRARY: ${BWA_LIBRARY}" )
#MESSAGE( "BWA INCLUDE: ${BWA_INCLUDE}" )

set(HDF5_USE_STATIC_LIBRARIES ON)
find_package( HDF5 REQUIRED COMPONENTS C CXX HL)
INCLUDE_DIRECTORIES(SYSTEM ${HDF5_INCLUDE_DIRS})
MESSAGE( "HDF5 LIBRARY: ${HDF5_LIBRARIES}" )
MESSAGE( "HDF5 LIBRARY CXX: ${HDF5_CXX_LIBRARIES}" )
MESSAGE( "HDF5 INCLUDE: ${HDF5_INCLUDE_DIRS}" )

MESSAGE( "BUILD TYPE: ${CMAKE_BUILD_TYPE}" )
MESSAGE( "INSTALL PREFIX: ${CMAKE_INSTALL_PREFIX}" )

add_subdirectory("src")
