# pyproject.toml

[build-system]
requires        = ['matplotlib','numpy','scipy', 'cython', 'h5py', 'flammkuchen', 'NCLS', 
                    'tables', 'cyvcf2', 'pandas', 'statsmodels', 'anndata', 'setuptools','wheel']

build-backend   = 'setuptools.build_meta'   

[project]
name            = 'scsnvpy'
description = "scsnvpy"
version     = "1.0"
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/GWW/scsnv"

[project.scripts]
scsnvmisc = "scsnvpy.scsnvmisc:go"
scsnv2mtx = "scsnvpy.scsnv2mtx:go"
