add_library(bwalib
    "QSufSort.c"
    "bamlite.c"
    "bntseq.c"
    "bwa.c"
    "bwamem.c"
    "bwamem_extra.c"
    "bwamem_pair.c"
    "bwape.c"
    "bwase.c"
    "bwaseqio.c"
    "bwashm.c"
    "bwt.c"
    "bwt_gen.c"
    "bwt_lite.c"
    "bwtaln.c"
    "bwtgap.c"
    "bwtindex.c"
    "bwtsw2_aux.c"
    "bwtsw2_chain.c"
    "bwtsw2_core.c"
    "bwtsw2_main.c"
    "bwtsw2_pair.c"
    "example.c"
    "fastmap.c"
    "is.c"
    "kopen.c"
    "kstring.c"
    "ksw.c"
    "kthread.c"
    "main.c"
    "malloc_wrap.c"
    "maxk.c"
    "pemerge.c"
    "rle.c"
    "rope.c"
    "utils.c"
)

target_link_libraries(bwalib z m pthread )
